--- a/components/SchematicsFigurePreviews/schematics-figure-previews.css
+++ b/components/SchematicsFigurePreviews/schematics-figure-previews.css
@@ -126,7 +126,6 @@ schematics-figure-previews {
       right: 0;
       bottom: 0;
       left: 0;
-      pointer-events: none;
       color: var(--preview-bg);
       z-index: 2;
     }
